force-app/main/default/objects/KimbleOne__ExpenseCategoryProfileTemplate__c/KimbleOne__ExpenseCategoryProfileTemplate__c.object-meta.xml
<CustomObject>
    <label>Expense Category Profile Template</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Category Profile Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>