force-app/main/default/objects/KimbleOne__ExpenseCategoryProfileTemplate__c/fields/KimbleOne__ExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpenseCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Category</label>
    <referenceTo>KimbleOne__ExpenseCategory__c</referenceTo>
    <relationshipLabel>Expense Category Profile Templates</relationshipLabel>
    <relationshipName>ExpenseCategoryProfileTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>