force-app/main/default/objects/KimbleOne__ExpenseCategoryProfileTemplate__c/fields/KimbleOne__NumberOfUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NumberOfUnits__c</fullName>
    <label>Number Of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>