force-app/main/default/objects/KimbleOne__ExpenseCategoryProfileTemplate__c/fields/KimbleOne__Product__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Product__c</fullName>
    <label>Product</label>
    <referenceTo>KimbleOne__Product__c</referenceTo>
    <relationshipLabel>Expense Category Profile Templates</relationshipLabel>
    <relationshipName>ExpenseCategoryProfileTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>